<resources>
    <string name="app_name">Tourist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ogun">Ogun State.</string>
    <string name="oyo">Oyo State.</string>
    <string name="oyo_moto">The Pace Setter State.</string>
    <string name="ogun_motor">The Gateway State.</string>
    <string name="favourite">Favourites</string>
    <string name="visit">Visited</string>
    <string name="search_hint">Search</string>
    <string name="about">About The App</string>
    <string name="exit">Close</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="getthere">GET THERE</string>
    <string name="call">CALL NOW</string>
    <string name="share">SHARE</string>
    <string name="byreg">By registering, You are agreeing \nTo our Terms of Service</string>
    <string name="login">Login</string>
    <string name="register">REGISTER</string>
    <string name="loading">Loading...</string>
    <string name="profile">My Profile</string>

</resources>
