<?xml version="1.0" encoding="utf-8"?>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".OgunHome">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.SubtitleCollapsingToolbarLayout
                android:id="@+id/collapsing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:background="@drawable/naijaflag"
                app:contentScrim="?attr/colorPrimary"
                app:title="ABUTH - Ado Ekiti"
                app:subtitle="Oyo State"
                app:expandedTitleTextAppearance="@style/ToolBarTitltleTheme"
                app:expandedSubtitleTextAppearance="@style/ToolBarSubtitltleTheme"
                app:expandedTitleMarginStart="6dp"
                app:expandedTitleMarginEnd="8dp">

                <include layout="@layout/customread"/>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="parallax"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    android:elevation="4dp">

                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.SubtitleCollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/colorPrimary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:id="@+id/holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="horizontal">
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:padding="15dp"
                    android:background="@drawable/buttonborder"
                    android:textColor="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_mapother"
                    android:text="@string/getthere"
                    android:layout_height="wrap_content"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="0dp"
                    android:padding="15dp"

                    android:textStyle="bold"
                    android:background="@drawable/buttonborder"
                    android:drawableLeft="@drawable/ic_map"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/call"
                    android:layout_height="wrap_content"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:textStyle="bold"
                    android:background="@drawable/buttonborder"
                    android:drawableLeft="@drawable/ic_map"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/share"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:lineHeight="25dp"
                android:padding="12dp"
                android:minLines="2"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="10dp"
                android:text="@string/ogun_motor"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>



    </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

